// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionDetail should render 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 hFlzIg no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
      >
        Test
      </div>
      <div
        class="flex items-center font-semibold"
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetail should render with bottom border 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 GJFVE no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
      >
        Test
      </div>
      <div
        class="flex items-center font-semibold"
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetail should render with extra children 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 bEbnOo no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
      >
        Test
      </div>
      <div
        class="flex items-center font-semibold"
      >
        test
      </div>
    </div>
    <div
      data-testid="TEST_CHILD"
    />
  </div>
</div>
`;

exports[`TransactionDetail should render with top border 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 hFlzIg no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
      >
        Test
      </div>
      <div
        class="flex items-center font-semibold"
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetail should render without border 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 kUQvOC no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
      >
        Test
      </div>
      <div
        class="flex items-center font-semibold"
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetail should render without padding 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 bEbnOo no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
      >
        Test
      </div>
      <div
        class="flex items-center font-semibold"
      >
        test
      </div>
    </div>
  </div>
</div>
`;
